--- a/LLPinColliderExperiments.tex
+++ b/LLPinColliderExperiments.tex
@@ -134,9 +134,20 @@ The CMS tracker-based search trigger on two clustered energy passing loose requi
   A recent search done on ATLAS is using di-muon channel with muon system only, in which four separate trigger pathway are used: $\slashed{E}_T > 110 $GeV; one muon with $p_T > 60$GeV and $|\eta|<1.05$; two muons with $p_T > 15$GeV and $\Delta R_{\mu\mu}<0.5$; or three muons with $p_T > 6$GeV. Thus this search extend the sensitivity to low mass region ($m_{\mu\mu}=15$GeV) as well as with various lepton multiplicities.
 
 \subsubsection{Lepton-jet searches}
-Lepton-jets are signature with lepton pair or multiple leptons clustered in a narrow area, which usually originated from the decay of boosted objects. In the CMS search for lepton-jet, fully muonic lepton-jets are selected from 8 TeV and part of 13 TeV dataset. The 13 TeV study is sensitive to di-muon parent particle masses up to 8.5 GeV.
+Lepton-jets are signature with lepton pair or multiple leptons clustered in a narrow area, which usually originated from the decay of boosted objects. 
+
+In the CMS search for lepton-jet, fully muonic lepton-jets are selected from 8 TeV and part of 13 TeV dataset. The 13 TeV study is sensitive to di-muon parent particle masses up to 8.5 GeV triggered by di-muon with standard isolation requirements. Event selection requires at least four muons, forming two opposite-charged muon pairs in minimum. 
+
+In ATLAS 8TeV search, three types of lepton-jets are considered: only-muon jet, electron/pion jet and inclusive of previous two types. The muon-only and electron/pion jet require two or four leptons while the mixted jet must contain two muons plus a jet consistent displaced with electron/pion pair. The trigger adopted requires three muon tracks in MS with $p_T$ > 6GeV, also the \textit{CalRatio} trigger is used for electron lepton-jet when electrons produced in HCAL. A \textit{narrow-scan} muon trigger is added in 13 Tev analysis. This trigger selects events with two muons close in $\eta-\phi$ plane, $\Delta R < 0.5$ with $p_T > 20(6)$GeV for (sub)leading muon. 
+
+Both the 8 and 13 TeV ATLAS searches are interpreted for Higgs-like scalar particles (with masses of 125 and 800 GeV) that decay effectively into either two or four lepton pairs, with each lepton pair assumed to come from a low-mass “dark" photon, $\gamma_D$ . The ATLAS result excludes exotic Higgs branching ratios below $10\%$ for dark photon lifetimes 2 < $c\tau$ < 100 mm. Note that here $\gamma_D$ is also allowed to decay to pions and so the results can also be interpreted for hadronically and semi-leptonically decaying LLPs. Also, there are some non-collider experiments constraining the parameter space of $\gamma_D$, which will be discussed in following chapter.
+
+The comparison of CMS and ATLAS searches are displayed in Fig. \cite{fig:lepton-jet}.
+
 
 \subsubsection{Summary for leptonic decay}
+
+
 
 \subsection{Semi-leptonic decay}
 
