Updates from Overleaf

--- a/LLP.bib
+++ b/LLP.bib
@@ -446,3 +446,16 @@
                        http://atlas.web.cern.ch/Atlas/GROUPS/PHYSICS/PAPERS/EXOT-2014-09/",
       doi           = "10.1007/JHEP02(2016)062",
 }
+
+@techreport{CMSDelayedPhoton,
+      title         = "{Search for long-lived neutral particles in the final
+                       state of delayed photons and missing energy in
+                       proton-proton collisions at $\sqrt s$ = 8 TeV}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-PAS-EXO-12-035",
+      year          = "2015",
+      reportNumber  = "CMS-PAS-EXO-12-035",
+      url           = "https://cds.cern.ch/record/2063495",
+}
