Updates from Overleaf

--- a/DetectorsInFuture.tex
+++ b/DetectorsInFuture.tex
@@ -1,2 +1,13 @@
 \section{Dedicated Detectors in Future}
 
+Despite a various of researches are done or proposed with superficially comprehensive coverage of LLP at the LHC, there are still cases, including ultra-low-mass particle, ultra-long lifetime particle and , which are barely covered by main experiments at LHC, due to the difficulties in triggering, object reconstruction and event selection. Hence, new proposals for dedicated experiments for LLPs are put forward to fill in these missing pieces. These new experiments are expected to provide good sensitivity to millicharged LLPs, magnetic monopoles and other LLPs hard to trigger or reconstructed.
+
+In general, high mass LLPs with high $p_T$ final states are covered with excellent sensitivity on ATLAS and CMS. Low mass LLPs are more challenging with higher backgrounds and low selection capability of triggers. In the short time regime, as the $c\tau$ comparable with the scale of VErtex LOcator (VELO), the sensitivity extends to lower mass in LHCb. For low-mass LLPs with long-lifetime, few sensitivity can be archived in majar experiments at LHC. LLPs with weak ionization, e.g. millicharged partcle, are barely visible in ATLAS, CMS and LHCb. These signatures can be covered by NA62 operating in beam dump mode, or by dedicated LHC experiments like milliQan, CODEX-b, FASER, or MATHUSLA. Each of dedicated experiments are sensitive to specific type of LLP signature.
+
+\subsection{The milliQan Experiment}
+
+MilliQan is a proposed dedicated experiment conducted at the LHC targeting non-quantized charged particle referred to as \textit{milli-charged particle} (mCP). The milliQan experiment is a segment of a general program to search for hidden sectors and other BSM scenarios. To estimate the potential reach of milliQan from theoretical aspect, an appealing example is built with an extra abelian gauge field added into the SM model. The additional gauge field couples to a massive Dirac fermion ("dark QED") and mixes with hypercharge through the kinetic term:
+\begin{equation}
+\mathcal{L} = \mathcal{L}_{SM}-\frac{1}{4}A_{\mu\nu}^{'}A^{'\mu\nu}+i\bar{\psi}(\slashed{\partial}+ie^{'}\slashed{A}^{'}+ iM_{mCP})\psi-\frac{\kappa}{2}A^{'}_{\mu\nu}B^{\mu\nu}
+\end{equation}
+
