--- a/DetectorsInFuture.tex
+++ b/DetectorsInFuture.tex
@@ -10,4 +10,9 @@ MilliQan is a proposed dedicated experiment conducted at the LHC targeting non-q
 \begin{equation}
 \mathcal{L} = \mathcal{L}_{SM}-\frac{1}{4}A_{\mu\nu}^{'}A^{'\mu\nu}+i\bar{\psi}(\slashed{\partial}+ie^{'}\slashed{A}^{'}+ iM_{mCP})\psi-\frac{\kappa}{2}A^{'}_{\mu\nu}B^{\mu\nu}
 \end{equation}
+Eliminating the mixing term by redefining the new gauge boson as $A_{\mu}^{'}\rightarrow A_{\mu}^{'} + \kappa B_{\mu}$, the coupling of massive charged particle to hypercharge shown as 
+\begin{equation}
+\mathcal{L} = \mathcal{L}_{SM}-\frac{1}{4}A_{\mu\nu}^{'}A^{'\mu\nu}+i\bar{\psi}(\slashed{\partial}+ie^{'}\slashed{A}^{'} - i\kappa e^{'}\slashed{B}+ iM_{mCP})\psi
+\end{equation}
+The new fermion field $\psi$ acts as particle carrying a milli-charge $\kappa e^'$, the mCP $\psi$ couples to the photon and Z boson with a charge $\kappa e^{'}\cos{\theta_W}$ and $-\kappa e^{'}\sin{\theta_W}$. The fractional charge in unit of the electric charge is $\eposilon \equiv \kappa e^' \cos{\theta_W}/e$
 
